--- a/public/css/app.css
+++ b/public/css/app.css
@@ -975,13 +975,13 @@ select {
   margin-left: auto;
   margin-right: auto;
 }
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
 .-my-2 {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .my-2 {
   margin-top: 0.5rem;
@@ -1069,23 +1069,23 @@ select {
 .mr-5 {
   margin-right: 1.25rem;
 }
-.mb-16 {
-  margin-bottom: 4rem;
-}
-.mr-6 {
-  margin-right: 1.5rem;
-}
 .ml-8 {
   margin-left: 2rem;
 }
 .mr-4 {
   margin-right: 1rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mb-16 {
+  margin-bottom: 4rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .-mt-px {
   margin-top: -1px;
@@ -1138,6 +1138,9 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-11 {
+  height: 2.75rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1183,6 +1186,9 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-4\/12 {
+  width: 33.333333%;
+}
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -1192,14 +1198,17 @@ select {
 .w-1\/2 {
   width: 50%;
 }
+.w-3\/6 {
+  width: 50%;
+}
+.w-44 {
+  width: 11rem;
+}
 .w-2\/5 {
   width: 40%;
 }
 .w-1\/5 {
   width: 20%;
-}
-.w-3\/6 {
-  width: 50%;
 }
 .w-2\/6 {
   width: 33.333333%;
@@ -1210,14 +1219,8 @@ select {
 .w-5\/12 {
   width: 41.666667%;
 }
-.w-44 {
-  width: 11rem;
-}
 .w-1 {
   width: 0.25rem;
-}
-.w-4\/12 {
-  width: 33.333333%;
 }
 .w-2\/12 {
   width: 16.666667%;
@@ -1367,15 +1370,15 @@ select {
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.divide-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
-}
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+.divide-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
 }
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
@@ -1549,13 +1552,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.bg-green-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1683,11 +1686,11 @@ select {
 .pl-8 {
   padding-left: 2rem;
 }
-.pb-12 {
-  padding-bottom: 3rem;
-}
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
 }
 .pl-0 {
   padding-left: 0px;
@@ -1968,10 +1971,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
-.hover\:bg-red-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
 .hover\:bg-green-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
@@ -1980,17 +1979,21 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
+.hover\:bg-red-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
-.hover\:bg-green-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
