--- a/public/css/app.css
+++ b/public/css/app.css
@@ -953,9 +953,6 @@ select {
 .right-0 {
   right: 0px;
 }
-.bottom-0 {
-  bottom: 0px;
-}
 .top-0 {
   top: 0px;
 }
@@ -1078,14 +1075,14 @@ select {
 .mb-16 {
   margin-bottom: 4rem;
 }
-.mr-6 {
-  margin-right: 1.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mr-6 {
+  margin-right: 1.5rem;
 }
 .-mt-px {
   margin-top: -1px;
@@ -1213,11 +1210,11 @@ select {
 .w-1\/6 {
   width: 16.666667%;
 }
-.w-5\/12 {
-  width: 41.666667%;
-}
 .w-1 {
   width: 0.25rem;
+}
+.w-5\/12 {
+  width: 41.666667%;
 }
 .w-2\/12 {
   width: 16.666667%;
@@ -1694,6 +1691,12 @@ select {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pr-16 {
+  padding-right: 4rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
 }
 .text-left {
   text-align: left;
