--- a/public/css/app.css
+++ b/public/css/app.css
@@ -984,6 +984,10 @@ select {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -1066,6 +1070,9 @@ select {
 .mr-5 {
   margin-right: 1.25rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .ml-8 {
   margin-left: 2rem;
 }
@@ -1074,9 +1081,6 @@ select {
 }
 .mb-16 {
   margin-bottom: 4rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -1213,11 +1217,11 @@ select {
 .w-1 {
   width: 0.25rem;
 }
-.w-5\/12 {
-  width: 41.666667%;
+.w-80 {
+  width: 20rem;
 }
-.w-2\/12 {
-  width: 16.666667%;
+.w-52 {
+  width: 13rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1553,13 +1557,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
-.bg-green-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
 .bg-slate-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
