Filtro casi listo

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -996,6 +996,10 @@ select {
   margin-top: auto;
   margin-bottom: auto;
 }
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
