--- a/public/css/app.css
+++ b/public/css/app.css
@@ -984,13 +984,13 @@ select {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
 }
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .mx-3 {
   margin-left: 0.75rem;
@@ -1080,23 +1080,23 @@ select {
 .ml-8 {
   margin-left: 2rem;
 }
-.mr-6 {
-  margin-right: 1.5rem;
+.-mt-px {
+  margin-top: -1px;
+}
+.mb-16 {
+  margin-bottom: 4rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 .-mt-10 {
   margin-top: -2.5rem;
-}
-.-mt-px {
-  margin-top: -1px;
-}
-.mb-16 {
-  margin-bottom: 4rem;
 }
 .block {
   display: block;
@@ -1556,10 +1556,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1567,6 +1563,14 @@ select {
 .bg-slate-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 .bg-green-700 {
   --tw-bg-opacity: 1;
@@ -1593,6 +1597,9 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-5 {
+  padding: 1.25rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1650,10 +1657,6 @@ select {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1661,6 +1664,10 @@ select {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1704,14 +1711,14 @@ select {
 .pr-16 {
   padding-right: 4rem;
 }
-.pl-0 {
-  padding-left: 0px;
+.pt-8 {
+  padding-top: 2rem;
 }
 .pb-8 {
   padding-bottom: 2rem;
 }
-.pt-8 {
-  padding-top: 2rem;
+.pl-0 {
+  padding-left: 0px;
 }
 .text-left {
   text-align: left;
