--- a/public/css/app.css
+++ b/public/css/app.css
@@ -992,10 +992,6 @@ select {
   margin-left: 1rem;
   margin-right: 1rem;
 }
-.mx-3 {
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-  }
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -1074,30 +1070,27 @@ select {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .mr-4 {
   margin-right: 1rem;
-}
-.ml-8 {
-  margin-left: 2rem;
 }
 .mr-6 {
   margin-right: 1.5rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
+.ml-8 {
+  margin-left: 2rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
 }
+.-mt-px {
+  margin-top: -1px;
+}
 .-mt-10 {
   margin-top: -2.5rem;
 }
-.-mt-px {
-    margin-top: -1px;
-  }
-  .mb-16 {
-    margin-bottom: 4rem;
-  }
 .block {
   display: block;
 }
@@ -1200,14 +1193,14 @@ select {
 .w-1\/4 {
   width: 25%;
 }
+.w-3\/6 {
+  width: 50%;
+}
 .w-2\/5 {
   width: 40%;
 }
 .w-1\/5 {
   width: 20%;
-}
-.w-3\/6 {
-  width: 50%;
 }
 .w-2\/6 {
   width: 33.333333%;
@@ -1218,13 +1211,12 @@ select {
 .w-44 {
   width: 11rem;
 }
-
+.w-52 {
+  width: 13rem;
+}
 .w-1 {
   width: 0.25rem;
 }
-.w-52 {
-    width: 13rem;
-  }
 .w-4\/12 {
   width: 33.333333%;
 }
@@ -1553,22 +1545,30 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
-.bg-blue-500 {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-slate-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
-.bg-green-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-  }
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1692,9 +1692,6 @@ select {
 .pl-8 {
   padding-left: 2rem;
 }
-.pr-16 {
-    padding-right: 4rem;
-  }
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1703,6 +1700,9 @@ select {
 }
 .pr-16 {
   padding-right: 4rem;
+}
+.pl-0 {
+  padding-left: 0px;
 }
 .pb-8 {
   padding-bottom: 2rem;
@@ -1994,6 +1994,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
 .hover\:bg-green-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
@@ -2002,10 +2006,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
-.hover\:bg-green-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-  }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
