--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1208,11 +1208,11 @@ select {
 .w-1\/6 {
   width: 16.666667%;
 }
-.w-44 {
-  width: 11rem;
-}
 .w-52 {
   width: 13rem;
+}
+.w-44 {
+  width: 11rem;
 }
 .w-1 {
   width: 0.25rem;
@@ -1384,6 +1384,10 @@ select {
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
+}
+.divide-gray-500 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-divide-opacity));
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1561,6 +1565,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+.bg-green-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1651,6 +1663,14 @@ select {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1684,14 +1704,14 @@ select {
 .pl-8 {
   padding-left: 2rem;
 }
+.pr-16 {
+  padding-right: 4rem;
+}
 .pb-12 {
   padding-bottom: 3rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
-}
-.pr-16 {
-  padding-right: 4rem;
 }
 .pb-8 {
   padding-bottom: 2rem;
@@ -1847,6 +1867,9 @@ select {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
+.decoration-1 {
+  text-decoration-thickness: 1px;
+}
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -1994,6 +2017,14 @@ select {
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
