--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1085,11 +1085,11 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.-mt-px {
-  margin-top: -1px;
-}
 .-mt-10 {
   margin-top: -2.5rem;
+}
+.-mt-px {
+  margin-top: -1px;
 }
 .block {
   display: block;
@@ -1139,6 +1139,12 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-14 {
+  height: 3.5rem;
+}
+.h-11 {
+  height: 2.75rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1187,20 +1193,17 @@ select {
 .w-1\/2 {
   width: 50%;
 }
-.w-1\/3 {
-  width: 33.333333%;
-}
-.w-1\/4 {
-  width: 25%;
-}
-.w-3\/6 {
-  width: 50%;
-}
 .w-2\/5 {
   width: 40%;
 }
 .w-1\/5 {
   width: 20%;
+}
+.w-3\/6 {
+  width: 50%;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-2\/6 {
   width: 33.333333%;
@@ -1217,8 +1220,23 @@ select {
 .w-1 {
   width: 0.25rem;
 }
+.w-1\/4 {
+  width: 25%;
+}
 .w-4\/12 {
   width: 33.333333%;
+}
+.w-2 {
+  width: 0.5rem;
+}
+.w-14 {
+  width: 3.5rem;
+}
+.w-9 {
+  width: 2.25rem;
+}
+.w-11 {
+  width: 2.75rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1320,6 +1338,9 @@ select {
 }
 .items-start {
   align-items: flex-start;
+}
+.items-end {
+  align-items: flex-end;
 }
 .items-center {
   align-items: center;
@@ -1561,9 +1582,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
-.bg-red-500 {
+.bg-green-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
 .bg-slate-300 {
   --tw-bg-opacity: 1;
@@ -1572,10 +1593,6 @@ select {
 .bg-green-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-.bg-green-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1598,6 +1615,12 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-1 {
+  padding: 0.25rem;
+}
+.p-2\.5 {
+  padding: 0.625rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1708,9 +1731,6 @@ select {
 }
 .pr-16 {
   padding-right: 4rem;
-}
-.pl-0 {
-  padding-left: 0px;
 }
 .pb-8 {
   padding-bottom: 2rem;
