--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1079,11 +1079,14 @@ select {
 .mr-4 {
   margin-right: 1rem;
 }
-.ml-8 {
-  margin-left: 2rem;
-}
 .mr-6 {
   margin-right: 1.5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+.ml-8 {
+  margin-left: 2rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
@@ -1096,9 +1099,6 @@ select {
 }
 .-mt-px {
   margin-top: -1px;
-}
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 .block {
   display: block;
@@ -1237,6 +1237,9 @@ select {
 }
 .w-4\/12 {
   width: 33.333333%;
+}
+.w-52 {
+  width: 13rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1503,10 +1506,6 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-green-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(21 128 61 / var(--tw-border-opacity));
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1675,14 +1674,6 @@ select {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
