--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1658,6 +1658,9 @@ select {
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
+.bg-fondo {
+  background-image: url(/fondo.jpg);
+}
 .bg-cover {
   background-size: cover;
 }
@@ -2160,6 +2163,10 @@ select {
 .hover\:text-red-800:hover {
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
+}
+.hover\:text-red-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
   z-index: 10;
